--- a/package.json
+++ b/package.json
@@ -41,38 +41,38 @@
     },
     "dependencies": {
         "babel-cli": "^6.26.0",
-        "babel-plugin-istanbul": "^4.1.1",
+        "babel-plugin-istanbul": "^4.1.5",
         "babel-register": "^6.26.0",
-        "body-parser": "^1.17.1",
-        "compression": "^1.5.2",
+        "body-parser": "^1.18.2",
+        "compression": "^1.7.1",
         "cookie-parser": "^1.3.3",
-        "cookie-session": "^1.3.1",
+        "cookie-session": "^2.0.0-beta.3",
         "csurf": "^1.9.0",
         "dotenv": "^4.0.0",
-        "express": "^4.15.4",
-        "express-session": "^1.15.2",
-        "express-validator": "^4.0.0",
-        "express-vue": "^4.0.8",
+        "express": "^4.16.2",
+        "express-session": "^1.15.6",
+        "express-validator": "^4.2.1",
+        "express-vue": "^4.0.13",
         "glob": "^7.1.1",
         "global": "^4.3.1",
         "gulp-ava": "^0.18.0",
-        "helmet": "^3.5.0",
+        "helmet": "^3.9.0",
         "i18n": "^0.8.3",
-        "method-override": "^2.3.8",
-        "morgan": "^1.8.1",
+        "method-override": "^2.3.10",
+        "morgan": "^1.9.0",
         "node-monkey": "^1.0.0-beta.5",
         "node-sass": "^4.5.1",
-        "serve-favicon": "^2.4.2"
+        "serve-favicon": "^2.4.5"
     },
     "devDependencies": {
-        "ava": "^0.22.0",
+        "ava": "^0.23.0",
         "axios": "^0.17.0",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.0.0",
         "babel-preset-es2015": "^6.24.0",
         "babel-preset-node6": "^11.0.0",
         "del": "^3.0.0",
-        "eslint": "^4.5.0",
+        "eslint": "^4.9.0",
         "eslint-plugin-ava": "^4.2.2",
         "gulp": "^3.9.1",
         "gulp-babel": "^7.0.0",
@@ -90,9 +90,9 @@
         "isparta": "^4.0.0",
         "mocha": "^4.0.0",
         "ncp": "^2.0.0",
-        "nyc": "^11.0.2",
-        "request": "^2.81.0",
-        "rimraf": "^2.6.1",
+        "nyc": "^11.2.1",
+        "request": "^2.83.0",
+        "rimraf": "^2.6.2",
         "time-grunt": "^1.2.1",
         "uuid": "^3.1.0"
     },
