--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         ]
     },
     "dependencies": {
+        "@types/uuid": "^3.4.3",
         "babel-cli": "^6.26.0",
         "babel-plugin-istanbul": "^4.1.6",
         "babel-register": "^6.26.0",
