--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "gulp-ava": "^0.19.0",
         "helmet": "^3.11.0",
         "i18n": "^0.8.3",
+        "jsonwebtoken": "^8.2.1",
         "method-override": "^2.3.10",
         "morgan": "^1.9.0",
         "node-monkey": "^1.0.0-beta.5",
@@ -71,6 +72,7 @@
         "@types/express": "^4.11.1",
         "@types/glob": "^5.0.35",
         "@types/helmet": "0.0.37",
+        "@types/jsonwebtoken": "^7.2.6",
         "@types/method-override": "0.0.31",
         "@types/morgan": "^1.7.35",
         "ava": "^0.24.0",
