--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "node",
             "request": "attach",
             "name": "Attach",
-            "port": 9230
+            "port": 9230,
+            "restart": true
         }
     ]
 }
